# Advance-Programming-Project-1-Milestone-B

./: A_Star.h  AbstractSearcher.h  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.cpp  ClientHandler.h  Compare.h  CompareAlgorithms.cpp  CompareAlgorithms.h  CompareStates.h  CubeSearch.cpp  CubeSearch.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Graph.cpp  Graph.h  Heuristic.h  HeuristicCompare.h  HeuristicManhatan.h  HeuristicSimple.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  NormalState.h  Path.h  README.md  SearchInGraph.cpp  SearchInGraph.h  SearchProblemClientHandler.cpp  SearchProblemClientHandler.h  Searchable.h  Searcher.h  SearcherSolver.h  (+20 more)
